<resources>
    <string name="app_name">Tasker</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="library">Library</string>
    <string name="select">select</string>
    <string name="remove">remove</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="filter">Filter</string>
    <string name="analyze">Analyze</string>
    <string name="other">Other</string>
    <string name="undo">undo</string>
    <string name="redo">redo</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="complete">Complete</string>
    <string name="accept">Accept</string>
    <string name="list_tasks">List Tasks</string>
    <string name="default_task_text">Task text</string>
    <string name="about_complete">Is complete task</string>
    <string name="input_text">input</string>


</resources>