<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="90dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/task_operation_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/select_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add" />

            <Button
                android:id="@+id/edit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit" />

            <Button
                android:id="@+id/filter_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter" />

            <Button
                android:id="@+id/analyze_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/analyze" />

            <Button
                android:id="@+id/other_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other" />
        </LinearLayout>

    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/task_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>

