<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/main_panel"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/home_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/home"
            android:textColor="#00796B" />

        <Button
            android:id="@+id/settings_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/settings"
            android:textColor="#00796B" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/task_operation_panel"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_panel">

        <Button
            android:id="@+id/add"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="#00796B" />

        <Button
            android:id="@+id/select"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textColor="#00796B" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/task_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/task_operation_panel"
        app:layout_constraintTop_toBottomOf="@+id/main_panel"
        android:padding="10dp" />




</androidx.constraintlayout.widget.ConstraintLayout>
